# typst_of_jupyter

./: .hgignore  LICENSE  README.md  Test Notebook.ipynb  dune  dune-project  typst_of_jupyter.opam
.github/workflows/: workflow.yml
lib/: Json_get.ml  Json_get.mli  Json_util.ml  Notebook.ml  Texmath.ml  Typst.ml  Typst_of_notebook.ml  Typst_of_notebook.ml.orig  Typst_of_notebook.mli  Util.ml  dune
lib/tests/: Notebook_parse_test.ml  Typst_test.ml  dune
test/: dune
