(library
 (name typst)
 (modules Typst)
 (libraries util
 base omd))

(library
 (name util)
 (modules Util Json_util)
 (preprocess (pps ppx_inline_test ppx_sexp_value))
 (inline_tests)
 (libraries base yojson))

(library
 (name notebook)
 (modules Notebook)
 (preprocess (pps ppx_inline_test ppx_sexp_value))
 (inline_tests)
 (libraries util
  base omd yojson parsexp ppx_sexp_value))

(library
 (name texmath)
 (modules texmath)
 (preprocess (pps ppx_inline_test ppx_expect ppx_sexp_conv))
 (inline_tests)
 (libraries base core angstrom))