(library
 (name typst)
 (modules Typst)
 (libraries util
 base omd))

(library
 (name util)
 (modules Util Json_util)
 (preprocess (pps ppx_inline_test ppx_sexp_value))
 (inline_tests)
 (libraries base yojson))

(library
 (name notebook)
 (modules Notebook)
 (preprocess (pps ppx_inline_test ppx_sexp_value))
 (inline_tests)
 (libraries util
  base base64 core omd yojson parsexp ppx_sexp_value))

(library
 (name texmath)
 (modules texmath)
 (preprocess (pps ppx_inline_test ppx_expect ppx_sexp_conv))
 (inline_tests)
 (libraries base core angstrom))

(library
  (name json_get)
  (modules Json_get)
  (preprocess (pps ppx_expect ppx_let ppx_sexp_value))
  (inline_tests)
  (libraries base core yojson)
  )