(library
 (name notebook_parse_test)
 (modules Notebook_parse_test)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_value))
 (libraries notebook base core_unix parsexp yojson))

(library
 (name typst_test)
 (modules Typst_test)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_value))
 (libraries typst base omd))
